--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "csv-parse": "^6.1.0",
     "maplibre-gl": "^5.7.0",
     "next": "15.5.0",
     "react": "19.1.0",
