--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "csv-parse": "^6.1.0",
     "maplibre-gl": "^5.7.0",
     "next": "15.5.0",
+    "next-intl": "^4.3.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
