Add TimeSlider component and integrate time series data handling in WbgtMap

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "csv-parse": "^6.1.0",
+    "lucide-react": "^0.542.0",
     "maplibre-gl": "^5.7.0",
     "next": "15.5.0",
     "next-intl": "^4.3.5",
