--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "csv-parse": "^6.1.0",
+    "dayjs": "^1.11.18",
     "lucide-react": "^0.542.0",
     "maplibre-gl": "^5.7.0",
     "next": "15.5.0",
