--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-map-gl": "^6.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "msw": "^2.11.1",
     "tailwindcss": "^4",
     "ts-unused-exports": "^11.0.1",
     "typescript": "^5",
